added hyperbolic theory for sw and minor changes to code

--- a/doc/dissertation/chapter2.tex
+++ b/doc/dissertation/chapter2.tex
@@ -11,8 +11,8 @@
 %  \input{content/preliminaries/burgers}
 \subsection{The Shallow Water Equations\label{sec:shallowwater}}
   \input{content/preliminaries/shallowwater}
-\subsection{The Euler Equations}
-%  \input{content/preliminaries/euler}
+  \subsubsection{Characteristics Analysis for the Shallow Water Equations}
+    \input{content/preliminaries/shallowwater_eigenvalues}
 %===============================================================================
 \section{Discretization}
 %===============================================================================
