--- a/doc/dissertation/content/newcommands.tex
+++ b/doc/dissertation/content/newcommands.tex
@@ -204,7 +204,13 @@
 
 % Riemann solvers
 \newcommand{\shockspeed}{S}
-\newcommand{\wavespeed}{\lambda}
+\newcommand{\eigenvalue}{\lambda}
+\newcommand{\eigenvaluematrix}{\mathbf{\Lambda}}
+\newcommand{\eigenvector}{\mathbf{k}}
+\newcommand{\eigenvectormatrix}{\mathbf{K}}
+\newcommand{\jacobianx}{\mathbf{A}}
+\newcommand{\characteristicsolution}{\mathbf{w}}
+\newcommand{\wavespeed}{\eigenvalue}
 \newcommand{\maxwavespeed}{\wavespeed_{\text{max}}}
 \newcommand{\wavestrength}{\mathcal{W}}
 
