--- a/doc/dissertation/content/preliminaries/conservation_laws.tex
+++ b/doc/dissertation/content/preliminaries/conservation_laws.tex
@@ -1,20 +1,21 @@
 A general system of conservation law equations is
 \begin{equation}\label{eq:conservation_law_system_homo}
-  \ppt{\vectorsolution} + \divergence\consfluxvector
+  \ppt{\vectorsolution} + \divergence\consfluxvector(\vectorsolution)
   = \mathbf{0} \eqc
 \end{equation}
 where $\vectorsolution$ is a vector of conserved quantities and
-$\consfluxvector$ is the vector of conservation law flux
+$\consfluxvector(\vectorsolution)$ is the vector of conservation law flux
 functions. When a conservation law does not fit this model equation,
 a source term must be added:
 \begin{equation}\label{eq:conservation_law_system_source}
-  \ppt{\vectorsolution} + \nabla\cdot\consfluxvector
+  \ppt{\vectorsolution} + \nabla\cdot\consfluxvector(\vectorsolution)
   = \conssource \eqp
 \end{equation}
 Table \ref{tab:cons_law_systems} gives some examples of conservation law
 systems.
 \begin{mytable}{Conservation Law Systems}{cons_law_systems}{l c c c}
-{\emph{System} & $\vectorsolution$ & $\consfluxvector$ & $\conssource$}
+{\emph{System} & $\vectorsolution$ & $\consfluxvector(\vectorsolution)$
+  & $\conssource$}
 \\
 Burgers equation & $\scalarsolution$ & $\half\scalarsolution^2$ & 0\\ [1ex]\\
 Euler equations &
