started fixing burgers

--- a/doc/dissertation/content/low_order/low_order_viscosity_domain_invariant.tex
+++ b/doc/dissertation/content/low_order/low_order_viscosity_domain_invariant.tex
@@ -71,3 +71,8 @@ The definition of the low-order viscosity follows.
    functions $\testfunction_i$ and $\testfunction_j$.
 \end{definition}
 %--------------------------------------------------------------------------------
+\begin{remark}
+For the shallow water equations, it can be advantageous to multiply the low-order
+viscosity by the local Froude number $\froude_\cell\equiv\max\limits_q\froude_q$,
+where the Froude number is defined as $\froude\equiv\frac{\speed}{\speedofsound}$.
+\end{remark}
