--- a/doc/dissertation/content/newcommands.tex
+++ b/doc/dissertation/content/newcommands.tex
@@ -201,6 +201,7 @@
 \newcommand{\waterlevel}{w}
 \newcommand{\gravity}{g}
 \newcommand{\speedofsound}{a}
+\newcommand{\froude}{\mathrm{Fr}}
 
 % Riemann solvers
 \newcommand{\shockspeed}{S}
