--- a/doc/dissertation/chapter2.tex
+++ b/doc/dissertation/chapter2.tex
@@ -48,8 +48,8 @@
 %===============================================================================
 \section{Low-Order Scheme for Conservation Law Systems}  
 %===============================================================================
-\subsection{Low-Order Viscosity\label{sec:low_order_viscosity_domain_invariant}}
-  \input{content/low_order/low_order_viscosity_domain_invariant}
+%\subsection{Low-Order Viscosity\label{sec:low_order_viscosity_domain_invariant}}
+%  \input{content/low_order/low_order_viscosity_domain_invariant}
 \subsection{The Low-Order System\label{sec:low_order_system_domain_invariant}}
   \input{content/low_order/low_order_system_domain_invariant}
 %===============================================================================
