--- a/doc/dissertation/content/low_order/low_order_scheme_scalar.tex
+++ b/doc/dissertation/content/low_order/low_order_scheme_scalar.tex
@@ -5,7 +5,7 @@ diffusion matrix and low-order system matrix follow.
 \begin{definition}{Low-Order Artificial Diffusion Matrix}
    The low-order artificial diffusion matrix $\loworderdiffusionmatrix[\timeindex]$
    is assembled using the low-order viscosity and local viscous bilinear
-   form introduced in Section \ref{sec:low_order_viscosity}:
+   form introduced in Section \ref{sec:low_order_viscosity_scalar}:
    \begin{equation}\label{eq:low_order_diffusion_matrix}
      \diffusionmatrixletter\ij^{L,\timeindex} \equiv
        \sumKSij\mkern-20mu\lowordercellviscosity[\timeindex]
