--- a/doc/meetings/meetings.tex
+++ b/doc/meetings/meetings.tex
@@ -11,8 +11,8 @@
 \setlength{\topmargin}{0in}
 \setlength{\textwidth}{6.5in}
 
-%\input{../dissertation/content/newcommands}
-\input{../dissertation/content/newestcommands}
+\input{newcommands_old}
+\input{../dissertation/content/newcommands}
 
 % define colors
 \colorlet{darkgreen}{green!90!black}
