--- a/doc/dissertation/README
+++ b/doc/dissertation/README
@@ -35,4 +35,5 @@ TO DO:
 * check that all equations are consistently punctuated (with comma or period
   at the end of each. For conditional expressions, make sure this is consistent
 * re-order symbols in nomenclature if their symbol has been changed
+* search for "TODO" in all files and address those issues
 
