more work on prelim, fixed output bug

--- a/doc/presentations/prelim/newcommands.tex
+++ b/doc/presentations/prelim/newcommands.tex
@@ -337,3 +337,14 @@
 \newcommand{\highwavespeedtwo}{\hat{\wavespeed}_2}
 \newcommand{\hinterplow}{\height_d}
 \newcommand{\hinterphigh}{\height_u}
+
+% checkboxes
+\usepackage{amssymb}
+\usepackage{xcolor}
+\definecolor{myorangeheavy}{RGB}{255,150,0}
+\newcommand{\checked}{
+  \makebox[0pt][l]{$\square$}\raisebox{.15ex}
+  {\hspace{0.1em}\textcolor{myorangeheavy}{$\checkmark$}}}
+\newcommand{\unchecked}{
+  \makebox[0pt][l]{$\square$}\hspace{0.9em}}
+
